--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,7 @@
+// Bourbon Neat base
+@import '../bower_components/neat/core/_neat.scss';
+
+// Custom Variables
 @import '_var.scss';
 
 // #1 Typography
