--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+.grid-container {
+  background-image: repeating-linear-gradient(to right, transparent, transparent 36px, rgba(0, 212, 255, 0.25) 36px, rgba(0, 212, 255, 0.25) calc(8.3333333333% - 39px + 36px)); }
+  .grid-container::after {
+    clear: both;
+    content: "";
+    display: block; }
+
+.span-6 {
+  width: calc(50% - 54px);
+  float: left;
+  margin-left: 36px;
+  border: 4px solid red; }
+
 .box-shadow-1 {
   box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37); }
 
